# tree-sitter-dotbox

./: .editorconfig  .gitignore  Cargo.toml  README.md  binding.gyp  example.box  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
shells/default/: default.nix
src/: grammar.json  node-types.json  parser.c
