[package]
name = "tree-sitter-dotbox"
description = "dotbox grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "dotbox"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-dotbox"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
